# pr-l-vements-obligatoires

./: .gitignore  CLAUDE.md  README.md  autres-prelevements-obligatoires.md  prelevements-obligatoires.md
data/: README.md  prelevements_obligatoires.csv  prelevements_obligatoires.json
docs/: INVENTAIRE_TRAVAIL.md  RAPPORT.md
pipeline/: Makefile  README.md  pyproject.toml  requirements.txt
pipeline/config/: decision_rules.yaml  sources.yaml
pipeline/data/processed/: coverage.json
pipeline/seed/: readme_inventory.csv  supplement.csv
pipeline/src/po_pipeline/: __init__.py  __main__.py  classify.py  config.py  fetch.py  io_utils.py  normalize.py  parse_eurostat.py  parse_seed.py  parse_taxes_affectees.py  parse_vm_tome1.py  paths.py  reconcile.py  report.py  schema.py  validate.py  workdoc.py
pipeline/tests/: test_classify.py  test_parsers.py  test_reconcile.py  test_schema.py
pipeline/tests/fixtures/: taxes_affectees.json
