[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "po-pipeline"
version = "0.1.0"
description = "Pipeline reproductible d'inventaire exhaustif des prélèvements obligatoires en France"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "PyYAML>=6.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "pdfplumber>=0.11",
    "jsonschema>=4.20",
    "rapidfuzz>=3.6",
]

[project.scripts]
po-pipeline = "po_pipeline.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
